# challenge-backend

./: .gitignore  .pre-commit-config.yaml  .samignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yml
alembic/: env.py
alembic/versions/: 20250909_1754-40893359ccb6_initial_migration_with_user_and_.py  20250913_1504-8ccf2530754e_add_provider_field_and_unique_.py  20250913_1533-529d579b6be8_add_provider_field_to_user_table_and_.py  20250913_1536-0637ac8571c0_make_birthday_gender_phone_fields_.py  20250914_1949-1a0ce3824700_add_unique_constraint_to_user_consent_.py  20250916_0959-49b2feb2dc7c_change_birthday_type_to_int_and_remove_.py  20250916_1901-fd77c7bf08e2_add_post_and_post_image_tables.py  20250916_1901-fdc12941d466_create_post_and_post_image_tables_with_.py  20250916_1911-605908b333e3_add_mission_id_to_post_table.py  20250916_1915-68998be89d14_add_unique_constraint_on_social_id_and_.py  20250923_1333-7dc8494bbd8a_initial_migration_with_all_models.py  20250928_1610-5068a70548aa_챌린지_미션_m2m_관계로_변경_및_필드_수정.py  20250930_1312-af466cc6a7af_add_completed_at_to_user_mission.py  20251007_1904-4f5a33b3dc67_initial_migration.py  20251011_1915-9f9f4749676c_add_post_like_table.py  20251011_1938-c577bb169764_add_index_to_post_like_user_id_and_post_.py  20251011_2041-1cb812ff96f5_add_badge_and_user_badge_tables.py  (+2 more)
app/common/: enums.py  exception_handlers.py  schema.py
infra/: DEPLOYMENT.md  Makefile  package-lock.json  serverless.yml
scripts/: seed_challenges.py
src/: main.py
(+86 files in other folders)
